Update drone and README

--- a/.drone.yml
+++ b/.drone.yml
@@ -31,3 +31,11 @@ steps:
     event:
     - push
     - pull_request
+
+- name: upload
+  image: covergates/drone-covergates
+  settings:
+    report_id: bt0k07q23akg00ac0fv0
+    report: coverage.txt
+    type: lcov
+    comment: true
