--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 ---
 kind: pipeline
-name: go112
+name: testing
 
 platform:
   os: linux
@@ -19,7 +19,7 @@ steps:
 
 - name: test
   pull: default
-  image: golang:1.12
+  image: golang:1.16
   environment:
     GO111MODULE: on
     GOPROXY: https://goproxy.cn
